feat: 字段支持动态变更